FIX: removes blank spacing in message actions (#30697)
This is a regression of https://github.com/discourse/discourse/pull/28277

--- a/plugins/chat/assets/stylesheets/common/chat-message-actions.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message-actions.scss
@@ -29,6 +29,7 @@
   .reply-btn,
   .chat-message-thread-btn,
   .bookmark-btn {
+    margin-right: -1px;
     padding: 0.5em 0;
     width: 2.5em;
 
